<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:padding="@dimen/size_padding_default"
    android:paddingBottom="@dimen/size_padding_scroll"
    tools:context=".ui.signin.SigninFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_title"
            style="@style/style_text_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_signin_text_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_label_phone"
            style="@style/style_text_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_margin_large"
            android:text="@string/fragment_signin_text_label_phone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_title" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/input_phone"
            style="@style/style_input_default"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_margin_default"
            android:hint="@string/fragment_signin_input_hint_phone"
            android:imeOptions="actionNext"
            android:inputType="phone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_label_phone" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_label_password"
            style="@style/style_text_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_margin_large"
            android:text="@string/fragment_signin_text_label_new_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_phone" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/input_password"
            style="@style/style_input_default"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_margin_default"
            android:hint="@string/fragment_signin_input_hint_new_password"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_label_password" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_signin"
            style="@style/style_button_default"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_margin_extra_large"
            android:text="@string/fragment_signin_button_signin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_password" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_action_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_margin_large"
            android:text="@string/fragment_signin_action_signup"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_signin"
            style="@style/style_text_action" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
