<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/size_padding_default"
    tools:context=".ui.validation_code.ValidationCodeFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_title"
        style="@style/style_text_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/fragment_validation_text_title" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_label"
        style="@style/style_text_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_margin_default"
        android:text="@string/fragment_validation_text_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_title" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/input_sms_code"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_margin_extra_large"
        android:hint="000000"
        android:padding="@dimen/size_padding_half"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_label"
        style="@style/style_input_sms_code" />

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="1.5dp"
        android:background="?colorAccent"
        app:layout_constraintEnd_toEndOf="@+id/input_sms_code"
        app:layout_constraintStart_toStartOf="@+id/input_sms_code"
        app:layout_constraintTop_toBottomOf="@+id/input_sms_code" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_validate"
        style="@style/style_button_default"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/button_text_default_validate"
        android:layout_marginTop="@dimen/size_margin_large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

</androidx.constraintlayout.widget.ConstraintLayout>